--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,9 @@
-version: '3.1'
 services:
+  web:
+    build: ./deployments/web/.
+    ports:
+      - "8080:80"
+    user:  "webuser"
   db:
     container_name: postgres
     image: postgres:17.3-bookworm
