--- a/deployments/web/Dockerfile
+++ b/deployments/web/Dockerfile
@@ -12,28 +12,31 @@ RUN adduser \
     "${USER}"
 
 RUN apt-get update && apt-get install -y ca-certificates
-RUN git clone https://github.com/d5avard/factory.git
 
-WORKDIR /go/factory
+COPY / /factory/
+WORKDIR /factory
+
 RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -o /go/bin/web ./cmd/web/web.go
 
 ### Final stage
 FROM scratch
+
+ARG APPLICATION="web"
+ARG DESCRIPTION="A simple web server that serves static files and a health check endpoint"    
+ARG PACKAGE="d5avard/factory"
+
 COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=build /etc/passwd /etc/passwd
 COPY --from=build /etc/group /etc/group
+COPY --from=build /factory/web/web/templates /app/templates/
+COPY --from=build /go/bin/${APPLICATION} /app/${APPLICATION}
+
+ENV PATH="${PATH}:/app"
 
 ARG USER
 
 USER ${USER}:${USER}
-
-ARG APPLICATION="web"
-ARG DESCRIPTION="A simple web server that serves static files and a health check endpoint"
-ARG VERSION="0.1.0"
-ARG VCS_REF="unknown"
-ARG BUILD_DATE="unknown"    
-ARG PACKAGE="d5avard/factory"
 
 LABEL org.opencontainers.image.ref.name="${PACKAGE}" \
     org.opencontainers.image.authors="Dany Savard>" \
@@ -42,5 +45,6 @@ LABEL org.opencontainers.image.ref.name="${PACKAGE}" \
     org.opencontainers.image.licenses="Apache 2.0" \
     org.opencontainers.image.source="https://github.com/${PACKAGE}"
 
-COPY --from=build /go/bin/${APPLICATION} /web
-CMD ["/web", "--port", "80"]
+WORKDIR /app
+
+ENTRYPOINT ["web"]
